# QtChessEngine

./: .gitignore  CMakeLists.txt  README.md  analyzer.cpp  application.qrc  bishop.cpp  castle.cpp  castle.h  chessboard.h  chesspiece.h  computerplayer.cpp  computerplayer.h  king.cpp  king.h  knight.h  main.cpp  pawn.cpp  pawn.h  player.cpp  player.h  queen.cpp  queen.h
Analyzer/: analyzer.h
GameLogic/: chessboard.cpp  chessboard.h  computerplayer.h  player.cpp  player.h
Pieces/: bishop.cpp  bishop.h  castle.cpp  castle.h  chesspiece.cpp  chesspiece.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h
UserInterface/: BoardView.qml  ChessMode.qml  GameDialog.qml  GameMenu.qml  Main.qml  Player.qml  Settings.qml  StartMenu.qml
